# VRAC

./: .gitignore  README.md  VRAC.circ
VAssembler/: .gitignore  CMakeLists.txt  args_handle.cpp  args_handle.hpp  error_handle.cpp  error_handle.hpp  file_handle.cpp  file_handle.hpp  vasm.cpp  vasm.hpp  vasm_config.hpp  vasm_errors.hpp  vasm_flags.cpp  vasm_flags.hpp  vasm_logging.cpp  vasm_logging.hpp
VAssembler/assemble/: assemble.cpp  assemble.hpp  decode.cpp  decode.hpp  decoder.cpp  decoder.hpp  exports.cpp  exports.hpp  imports.cpp  imports.hpp  instructions.cpp  instructions.hpp  object_file.cpp  object_file.hpp  tokenizer.cpp  tokenizer.hpp
VAssembler/link/: funcs_handle.cpp  funcs_handle.hpp  linker.cpp  linker.hpp
VAssembler/pre_assemble/: pre_asemble.hpp  pre_assemble.cpp  pre_assemble.hpp
VAssembler/tests/: 1.vasm  2.vasm  3.vasm
docs/: architecture.md  assemble.md
